новые блоки новые шрифты и правки

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="fonts/css/all.min.css"> </head>
+    <link rel="stylesheet" href="fonts/css/all.min.css"> 
+</head>
 <body>
     <div class="conteiner">
         <header>
@@ -13,9 +14,10 @@
                 <a href="index.html" class="logo">
                     <svg class="svg logo_svg" width="28" height="24" viewBox="0 0 64 56">
                         <g transform="translate(-376 -40)">
-                            <use xlink:href="#logo" /> </g>
-                    </svg> <span class="logo-txt">Waxom</span> </a>
-                <label class="label_nav" for="menu"> <span class="body_1 body_0"></span> <span class="body_2 body_0"></span> <span class="body_3 body_0"></span></label>
+                            <use xlink:href="#logo" /> 
+                        </g>
+                    </svg> <span class="logo-txt">Waxom</span> 
+                </a>
                 <input id="menu" type="checkbox">
                 <ul class="nav">
                     <li> <a href="#">Home</a> </li>
@@ -32,7 +34,8 @@
                         <g>
                             <g transform="translate(-1476 -55)">
                                 <use xlink:href="#qfdna" />
-                                <use xlink:href="#qfdna" /> </g>
+                                <use xlink:href="#qfdna" /> 
+                            </g>
                         </g>
                     </svg>
                 </a>
@@ -46,7 +49,8 @@
                     <a href="#" class="button_03">
                         <svg class="svg_arrow_left button_02" width="28" height="24" viewBox="0 0 40 73">
                             <g transform="translate(-150 -475)">
-                                <use xlink:href="#arrow_left" /> </g>
+                                <use xlink:href="#arrow_left" /> 
+                            </g>
                         </svg>
                     </a>
                 </div>
@@ -58,7 +62,8 @@
                     <a href="#" class="button_03">
                         <svg class="svg_arrow_right button_02" width="28" height="24" viewBox="0 0 40 73">
                             <g transform="translate(-1730 -475)">
-                                <use xlink:href="#arrow_right" /> </g>
+                                <use xlink:href="#arrow_right" /> 
+                            </g>
                         </svg>
                     </a>
                 </div>
@@ -78,9 +83,10 @@
                         <a href="#">
                             <svg class="svg svg_pen pen pen-svg" width="52" height="36" viewBox="0 0 49 49">
                                 <g transform="translate(-487 -1104)">
-                                    <use xlink:href="#pen" /> </g>
+                                    <use xlink:href="#pen" /> 
+                                </g>
                             </svg>
-                            <h2 class="hower_svg_grup style_1">Web&nbsp;&&nbsp;App Design</h2>
+                            <h2 class="hower_svg_grup style_1">Web & App Design</h2>
                             <p>Nam liber tempor cum soluta nobis
                                 <wbr> eleifend option congue nihil imperdiet
                                 <wbr> doming id quod mazim. </p> <span class="mini_line hower_svg_grup"></span> </a>
@@ -119,6 +125,203 @@
                                 <wbr> doming id quod mazim. </p> <span class="mini_line hower_svg_grup"></span> </a>
                     </div>
                 </div>
+                <div class="wraper_img">
+                    <h2 class="one_font_style_class_h2">Waxom is Realization of your Ideas.</h2>
+                    <p class="one_font_style_class_p">Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+                    <div class="img-items"> <img src="img/browser-left.jpg" class="img-cheked_1 cursor" width="164" height="156" alt="foto"> <img src="img/browser-center.jpg" class="img-cheked_2 cursor" width="164" height="156" alt="foto"> <img src="img/browser-right.jpg" class="img-cheked_3 cursor" width="164" height="156" alt="foto"> </div>
+                </div>
+            </section>
+            <aside class="aside_1">
+                <div class="waxom_h2_span">
+                    <h2>
+                  <span>Waxom</span>Multipurpose WordPress Theme
+               </h2>
+                    <p class="white_word_2">Don't Forget to Rate the Template. Thanks so much!</p>
+                </div>
+                <button class="button_04" type="button">Purchase&nbsp;Now</button>
+            </aside>
+            <section class="main_box2">
+                <h2 class="one_font_style_class_h2">Our Latest Projects.</h2>
+                <p class="one_font_style_class_p">Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est&nbsp;etiam
+                    <wbr> processus dynamicus, qui sequitur mutationem consuetudium. </p>
+                <ul class="nav_2">
+                    <li> <a href="#">All</a> </li>
+                    <li> <a href="#">Web Design</a> </li>
+                    <li> <a href="#">Mobile App</a> </li>
+                    <li> <a href="#">Illustration</a> </li>
+                    <li> <a href="#">Photography</a> </li>
+                </ul>
+                <article class="foto_conteyner">
+                    <div class="flex_div_img">
+                        <div class="boom">
+                            <button class="btn_svg_1">
+                                <svg class="svg_boom boom_link" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="26" height="26" viewBox="0 0 26 26">
+                                    <g>
+                                        <g transform="translate(-920 -2641)">
+                                            <use xlink:href="#q0osa" />
+                                            <use xlink:href="#q0osa" /> 
+                                        </g>
+                                    </g>
+                                </svg>
+                            </button>
+                            <button class="btn_svg_2">
+                                <svg class="svg_boom boom_lupa" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="26" height="25" viewBox="0 0 26 25">
+                                    <g>
+                                        <g transform="translate(-974 -2641)">
+                                            <use xlink:href="#s4yma" />
+                                            <use fill="" xlink:href="#s4yma" /> 
+                                        </g>
+                                    </g>
+                                </svg>
+                            </button>
+                        </div> <img class="img_nav_2" src="img/photophone.jpg" width="100%" height="65%" alt="foto">
+                        <div class="description_img">
+                            <h3>Claritas Etiam Processus</h3>
+                            <p>Photography, Nature</p>
+                        </div>
+                    </div>
+                    <div class="flex_div_img">
+                        <div class="boom">
+                            <button class="btn_svg_1">
+                                <svg class="svg_boom boom_link" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="26" height="26" viewBox="0 0 26 26">
+                                    <g>
+                                        <g transform="translate(-920 -2641)">
+                                            <use xlink:href="#svg_01" />
+                                            <use fill="" xlink:href="#svg_01" /> 
+                                        </g>
+                                    </g>
+                                </svg>
+                            </button>
+                            <button class="btn_svg_2">
+                                <svg class="svg_boom boom_lupa" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="26" height="25" viewBox="0 0 26 25">
+                                    <g>
+                                        <g transform="translate(-974 -2641)">
+                                            <use xlink:href="#s4yma" />
+                                            <use fill="" xlink:href="#s4yma" /> 
+                                        </g>
+                                    </g>
+                                </svg>
+                            </button>
+                        </div> <img class="img_nav_2" src="img/photo_gora.jpg" width="100%" height="65%" alt="foto">
+                        <div class="description_img">
+                            <h3>Quam Nutamus Farum</h3>
+                            <p>Graphic Design, Mock-Up</p>
+                        </div>
+                    </div>
+                    <div class="flex_div_img">
+                        <div class="boom">
+                            <button class="btn_svg_1">
+                                <svg class="svg_boom boom_link" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="26" height="26" viewBox="0 0 26 26">
+                                    <g>
+                                        <g transform="translate(-920 -2641)">
+                                            <use xlink:href="#svg_01" />
+                                            <use fill="" xlink:href="#svg_01" /> 
+                                        </g>
+                                    </g>
+                                </svg>
+                            </button>
+                            <button class="btn_svg_2">
+                                <svg class="svg_boom boom_lupa" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="26" height="25" viewBox="0 0 26 25">
+                                    <g>
+                                        <g transform="translate(-974 -2641)">
+                                            <use xlink:href="#s4yma" />
+                                            <use fill="" xlink:href="#s4yma" /> 
+                                        </g>
+                                    </g>
+                                </svg>
+                            </button>
+                        </div> <img class="img_nav_2" src="img/Photo_letter.jpg" width="100%" height="65%" alt="foto">
+                        <div class="description_img">
+                            <h3>Usus Legentis Videntur</h3>
+                            <p>Usus Legentis Videntur</p>
+                        </div>
+                    </div>
+                    <div class="flex_div_img">
+                        <div class="boom">
+                            <button class="btn_svg_1">
+                                <svg class="svg_boom boom_link" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="26" height="26" viewBox="0 0 26 26">
+                                    <g>
+                                        <g transform="translate(-920 -2641)">
+                                            <use xlink:href="#svg_01" />
+                                            <use fill="" xlink:href="#svg_01" /> 
+                                        </g>
+                                    </g>
+                                </svg>
+                            </button>
+                            <button class="btn_svg_2">
+                                <svg class="svg_boom boom_lupa" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="26" height="25" viewBox="0 0 26 25">
+                                    <g>
+                                        <g transform="translate(-974 -2641)">
+                                            <use xlink:href="#s4yma" />
+                                            <use fill="" xlink:href="#s4yma" /> 
+                                        </g>
+                                    </g>
+                                </svg>
+                            </button>
+                        </div> <img class="img_nav_2" src="img/photo_pik.jpg" width="100%" height="65%" alt="foto">
+                        <div class="description_img">
+                            <h3>Claritas Etiam Processus</h3>
+                            <p>Photography, Nature</p>
+                        </div>
+                    </div>
+                    <div class="flex_div_img">
+                        <div class="boom">
+                            <button class="btn_svg_1">
+                                <svg class="svg_boom boom_link" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="26" height="26" viewBox="0 0 26 26">
+                                    <g>
+                                        <g transform="translate(-920 -2641)">
+                                            <use xlink:href="#svg_01" />
+                                            <use fill="" xlink:href="#svg_01" /> 
+                                        </g>
+                                    </g>
+                                </svg>
+                            </button>
+                            <button class="btn_svg_2">
+                                <svg class="svg_boom boom_lupa" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="26" height="25" viewBox="0 0 26 25">
+                                    <g>
+                                        <g transform="translate(-974 -2641)">
+                                            <use xlink:href="#s4yma" />
+                                            <use fill="" xlink:href="#s4yma" /> 
+                                        </g>
+                                    </g>
+                                </svg>
+                            </button>
+                        </div> <img class="img_nav_2" src="img/photo_pik_2.jpg" width="100%" height="65%" alt="foto">
+                        <div class="description_img">
+                            <h3>Quam Nutamus Farum</h3>
+                            <p>Graphic Design, Mock-Up</p>
+                        </div>
+                    </div>
+                    <div class="flex_div_img">
+                        <div class="boom">
+                            <button class="btn_svg_1">
+                                <svg class="svg_boom boom_link" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="26" height="26" viewBox="0 0 26 26">
+                                    <g>
+                                        <g transform="translate(-920 -2641)">
+                                            <use xlink:href="#svg_01" />
+                                            <use fill="" xlink:href="#svg_01" /> 
+                                        </g>
+                                    </g>
+                                </svg>
+                            </button>
+                            <button class="btn_svg_2">
+                                <svg class="svg_boom boom_lupa" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="26" height="25" viewBox="0 0 26 25">
+                                    <g>
+                                        <g transform="translate(-974 -2641)">
+                                            <use xlink:href="#s4yma" />
+                                            <use fill="" xlink:href="#s4yma" /> 
+                                        </g>
+                                    </g>
+                                </svg>
+                            </button>
+                        </div> <img class="img_nav_2" src="img/photo_ostrof.png" width="100%" height="65%" alt="foto">
+                        <div class="description_img">
+                            <h3>Usus Legentis Videntur</h3>
+                            <p>Photography, Holiday</p>
+                        </div>
+                    </div>
+                </article>
+                <button type="button" class="btn_5">Load More</button>
             </section>
         </main>
     </div>
